Added script.js for javascript logic!

--- a/index.html
+++ b/index.html
@@ -180,22 +180,6 @@
         &copy; <span id="current-year"></span> Karwaan‑e‑Umeed. All rights reserved.
       </div>
     </footer>
-
-    <script>
-      const menuBtn = document.getElementById("menu-btn");
-      const closeMenu = document.getElementById("close-menu");
-      const mobileMenu = document.getElementById("mobile-menu");
-
-      menuBtn.addEventListener("click", () => {
-        mobileMenu.classList.remove("translate-x-full");
-        mobileMenu.classList.add("translate-x-0");
-      });
-
-      closeMenu.addEventListener("click", () => {
-        mobileMenu.classList.add("translate-x-full");
-        mobileMenu.classList.remove("translate-x-0");
-      });
-      document.getElementById("current-year").textContent = new Date().getFullYear();
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
