Fixed minor colors

--- a/index.html
+++ b/index.html
@@ -12,31 +12,72 @@
     <title>Karwaan-e-Umeed | Home</title>
   </head>
   <body class="text-gray-800">
-    <header class="relative bg-cover bg-center lg:bg-fixed bg-no-repeat" style="background-image: url('assets/hero-image.jpg')">
+    <header
+      class="relative bg-cover bg-center lg:bg-fixed bg-no-repeat"
+      style="background-image: url('assets/hero-image.jpg')"
+    >
       <div class="absolute inset-0 bg-black/40"></div>
 
       <!-- Navbar -->
-      <nav class="relative z-10 max-w-7xl mx-auto px-4 py-4 flex items-center justify-between text-white">
+      <nav
+        class="relative z-10 max-w-7xl mx-auto px-4 py-4 flex items-center justify-between text-white"
+      >
         <!-- Logo -->
-        <div class="text-4xl md:text-5xl uppercase font-bold text-green-300">KU.</div>
+        <div class="text-4xl md:text-5xl uppercase font-bold text-green-300">
+          KU.
+        </div>
 
         <ul class="hidden md:flex space-x-6 font-medium mx-auto">
-          <li><a href="index.html" class="hover:text-green-300 transition">Home</a></li>
-          <li><a href="survey.html" class="hover:text-green-300 transition">Survey</a></li>
-          <li><a href="perspectives.html" class="hover:text-green-300 transition">Perspectives</a></li>
-          <li><a href="pakistan.html" class="hover:text-green-300 transition">Child Labor in Pakistan</a></li>
-          <li><a href="fundraising.html" class="hover:text-green-300 transition">Fundraising & Office</a></li>
+          <li>
+            <a href="index.html" class="hover:text-green-300 transition"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a href="survey.html" class="hover:text-green-300 transition"
+              >Survey</a
+            >
+          </li>
+          <li>
+            <a href="perspectives.html" class="hover:text-green-300 transition"
+              >Perspectives</a
+            >
+          </li>
+          <li>
+            <a href="pakistan.html" class="hover:text-green-300 transition"
+              >Child Labor in Pakistan</a
+            >
+          </li>
+          <li>
+            <a href="fundraising.html" class="hover:text-green-300 transition"
+              >Fundraising & Office</a
+            >
+          </li>
         </ul>
 
         <!-- Support Button -->
-        <a href="fundraising.html" class="hidden md:block bg-green-400 text-white font-semibold px-4 py-2 rounded-lg hover:bg-green-500 transition">
+        <a
+          href="fundraising.html"
+          class="hidden md:block bg-green-400 text-white font-semibold px-4 py-2 rounded-lg hover:bg-green-500 transition"
+        >
           Support Our Cause
         </a>
 
         <!-- Mobile Icon -->
         <button class="md:hidden text-white" id="menu-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-8"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5"
+            />
           </svg>
         </button>
       </nav>
@@ -46,31 +87,70 @@
         id="mobile-menu"
         class="fixed top-0 right-0 w-64 h-full bg-white text-black/80 transform translate-x-full transition-transform duration-300 z-50 md:hidden"
       >
-        <div class="p-4 flex justify-between items-center border-b border-green-700">
+        <div
+          class="p-4 flex justify-between items-center border-b border-green-700"
+        >
           <span class="text-xl font-bold">Menu</span>
           <!-- Close Button -->
           <button id="close-menu">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6 18L18 6M6 6l12 12"
+              />
             </svg>
           </button>
         </div>
         <ul class="p-4 space-y-4">
-          <li><a class="block hover:text-green-300 transition-all duration-300">Home</a></li>
-          <li><a href="survey.html" class="block hover:text-green-300">Survey</a></li>
-          <li><a href="perspectives.html" class="block hover:text-green-300">Perspectives</a></li>
-          <li><a href="pakistan.html" class="block hover:text-green-300">Child Labor in Pakistan</a></li>
-          <li><a href="fundraising.html" class="block hover:text-green-300">Fundraising & Office</a></li>
+          <li>
+            <a class="block hover:text-green-300 transition-all duration-300"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a href="survey.html" class="block hover:text-green-300">Survey</a>
+          </li>
+          <li>
+            <a href="perspectives.html" class="block hover:text-green-300"
+              >Perspectives</a
+            >
+          </li>
+          <li>
+            <a href="pakistan.html" class="block hover:text-green-300"
+              >Child Labor in Pakistan</a
+            >
+          </li>
+          <li>
+            <a href="fundraising.html" class="block hover:text-green-300"
+              >Fundraising & Office</a
+            >
+          </li>
         </ul>
       </div>
 
       <!-- Hero Section -->
-      <div class="relative flex items-center flex-col justify-between gap-y-4 z-10 text-center text-white py-32 space-y-10 px-4">
-        <h1 class="text-3xl md:text-5xl font-bold mb-4">Together Against Child Labor</h1>
+      <div
+        class="relative flex items-center flex-col justify-between gap-y-4 z-10 text-center text-white py-32 space-y-10 px-4"
+      >
+        <h1 class="text-3xl md:text-5xl font-bold mb-4">
+          Together Against Child Labor
+        </h1>
         <p class="md:text-lg mb-6 max-w-2xl mx-auto">
-          Karwaan-e-Umeed is on a mission to raise awareness, support victims, and eliminate child labor from society.
+          Karwaan-e-Umeed is on a mission to raise awareness, support victims,
+          and eliminate child labor from society.
         </p>
-        <a href="fundraising.html" class="bg-green-400 text-white font-semibold px-6 py-3 rounded-lg hover:bg-green-500 transition">
+        <a
+          href="fundraising.html"
+          class="bg-green-400 text-white font-semibold px-6 py-3 rounded-lg hover:bg-green-500 transition"
+        >
           Support Our Cause
         </a>
       </div>
@@ -90,50 +170,100 @@
           <div
             class="bg-white rounded-lg cursor-pointer shadow-lg hover:shadow-2xl transition-shadow duration-300 overflow-hidden h-[46rem] flex flex-col"
           >
-            <img src="assets/child-labor2.jpg" alt="Why Does Child Labor Exist?" class="w-full h-[25rem] object-cover flex-none" />
+            <img
+              src="assets/child-labor2.jpg"
+              alt="Why Does Child Labor Exist?"
+              class="w-full h-[25rem] object-cover flex-none"
+            />
             <div class="flex-1 p-6 flex flex-col justify-between">
               <div>
-                <h3 class="md:text-2xl text-xl font-semibold text-green-700 mb-3">Why Does Child Labor Exist?</h3>
-                <p class="text-gray-700 text-sm md:text-base leading-relaxed mb-4">
-                  Child labor persists due to extreme poverty, lack of quality education, and weak enforcement of labor laws. Many families depend on
-                  the income of their children to survive, creating a vicious cycle of poverty and lost opportunities.
+                <h3
+                  class="md:text-2xl text-xl font-semibold text-green-700 mb-3"
+                >
+                  Why Does Child Labor Exist?
+                </h3>
+                <p
+                  class="text-gray-700 text-sm md:text-base leading-relaxed mb-4"
+                >
+                  Child labor persists due to extreme poverty, lack of quality
+                  education, and weak enforcement of labor laws. Many families
+                  depend on the income of their children to survive, creating a
+                  vicious cycle of poverty and lost opportunities.
                 </p>
               </div>
-              <a href="survey.html" class="self-start bg-green-400 text-white font-semibold px-5 py-2 rounded-lg hover:bg-green-500 transition">
+              <a
+                href="survey.html"
+                class="self-start bg-green-400 text-white font-semibold px-5 py-2 rounded-lg hover:bg-green-500 transition"
+              >
                 Learn More
               </a>
             </div>
           </div>
 
           <!-- Card 2 -->
-          <div class="bg-white rounded-lg shadow-lg overflow-hidden h-[46rem] hover:shadow-2xl transition-shadow duration-300 flex flex-col">
-            <img src="assets/aim-image.jpg" alt="What Do We Aim?" class="w-full h-[25rem] object-cover flex-none" />
+          <div
+            class="bg-white rounded-lg shadow-lg overflow-hidden h-[46rem] hover:shadow-2xl transition-shadow duration-300 flex flex-col"
+          >
+            <img
+              src="assets/aim-image.jpg"
+              alt="What Do We Aim?"
+              class="w-full h-[25rem] object-cover flex-none"
+            />
             <div class="flex-1 p-6 flex flex-col justify-between">
               <div>
-                <h3 class="md:text-2xl text-xl font-semibold text-green-700 mb-3">What Do We Aim?</h3>
-                <p class="text-gray-700 text-sm md:text-base leading-relaxed mb-4">
-                  To combat child labor by identifying its root causes, raising awareness, and ensuring access to education for underprivileged
-                  children through community-driven initiatives, research-based advocacy, and sustainable partnerships.
+                <h3
+                  class="md:text-2xl text-xl font-semibold text-green-700 mb-3"
+                >
+                  What Do We Aim?
+                </h3>
+                <p
+                  class="text-gray-700 text-sm md:text-base leading-relaxed mb-4"
+                >
+                  To combat child labor by identifying its root causes, raising
+                  awareness, and ensuring access to education for
+                  underprivileged children through community-driven initiatives,
+                  research-based advocacy, and sustainable partnerships.
                 </p>
               </div>
-              <a href="survey.html" class="self-start bg-green-400 text-white font-semibold px-5 py-2 rounded-lg hover:bg-green-500 transition">
+              <a
+                href="survey.html"
+                class="self-start bg-green-400 text-white font-semibold px-5 py-2 rounded-lg hover:bg-green-500 transition"
+              >
                 Learn More
               </a>
             </div>
           </div>
 
           <!-- Card 3 -->
-          <div class="bg-white rounded-lg shadow-lg overflow-hidden h-[48rem] flex flex-col hover:shadow-2xl transition-shadow duration-300">
-            <img src="assets/impact-image.jpg" alt="Why Would It Create an Impact?" class="w-full h-[25rem] object-cover flex-none" />
+          <div
+            class="bg-white rounded-lg shadow-lg overflow-hidden h-[48rem] flex flex-col hover:shadow-2xl transition-shadow duration-300"
+          >
+            <img
+              src="assets/impact-image.jpg"
+              alt="Why Would It Create an Impact?"
+              class="w-full h-[25rem] object-cover flex-none"
+            />
             <div class="flex-1 p-6 flex flex-col justify-between">
               <div>
-                <h3 class="md:text-2xl text-xl font-semibold text-green-700 mb-3">Why Would It Create an Impact?</h3>
-                <p class="text-gray-700 text-sm md:text-base leading-relaxed mb-4">
-                  Eliminating child labor not only protects children but also empowers communities. By ensuring children receive education instead of
-                  exploitation, we foster economic growth, reduce poverty, and create a future where every child can realize their potential.
+                <h3
+                  class="md:text-2xl text-xl font-semibold text-green-700 mb-3"
+                >
+                  Why Would It Create an Impact?
+                </h3>
+                <p
+                  class="text-gray-700 text-sm md:text-base leading-relaxed mb-4"
+                >
+                  Eliminating child labor not only protects children but also
+                  empowers communities. By ensuring children receive education
+                  instead of exploitation, we foster economic growth, reduce
+                  poverty, and create a future where every child can realize
+                  their potential.
                 </p>
               </div>
-              <a href="survey.html" class="self-start bg-green-400 text-white font-semibold px-5 py-2 rounded-lg hover:bg-green-500 transition">
+              <a
+                href="survey.html"
+                class="self-start bg-green-400 text-white font-semibold px-5 py-2 rounded-lg hover:bg-green-500 transition"
+              >
                 Learn More
               </a>
             </div>
@@ -148,7 +278,8 @@
         <div class="text-center md:text-left">
           <h1 class="text-4xl font-semibold mb-2">KU.</h1>
           <p class="text-white/90 text-sm">
-            Together, we strive to end child labor through community‑driven initiatives, research, and sustainable partnerships.
+            Together, we strive to end child labor through community‑driven
+            initiatives, research, and sustainable partnerships.
           </p>
         </div>
 
@@ -157,27 +288,46 @@
           <ul class="space-y-2">
             <li><a href="index.html" class="hover:underline">Home</a></li>
             <li><a href="survey.html" class="hover:underline">Survey</a></li>
-            <li><a href="perspectives.html" class="hover:underline">Perspectives</a></li>
-            <li><a href="pakistan.html" class="hover:underline">Child Labor in Pakistan</a></li>
-            <li><a href="fundraising.html" class="hover:underline">Fundraising & Office</a></li>
+            <li>
+              <a href="perspectives.html" class="hover:underline"
+                >Perspectives</a
+              >
+            </li>
+            <li>
+              <a href="pakistan.html" class="hover:underline"
+                >Child Labor in Pakistan</a
+              >
+            </li>
+            <li>
+              <a href="fundraising.html" class="hover:underline"
+                >Fundraising & Office</a
+              >
+            </li>
           </ul>
         </div>
 
         <div class="text-center md:text-right text-sm md:text-base">
           <h4 class="font-semibold mb-3">Contact Us</h4>
-          <p class="text-gray-200">Ground Floor, Khokhar Plaza</p>
-          <p class="text-gray-200">Rehmanpura, Lahore</p>
+          <p class="text-white/90">Ground Floor, Khokhar Plaza</p>
+          <p class="text-white/90">Rehmanpura, Lahore</p>
           <p class="mt-2">
-            <a href="mailto:info@karwaaneumeed.org" class="hover:underline">info@karwaaneumeed.org</a>
+            <a href="mailto:info@karwaaneumeed.org" class="hover:underline"
+              >info@karwaaneumeed.org</a
+            >
           </p>
           <p class="mt-1">
-            <a href="tel:+923001234567" class="hover:underline">+92 300 1234567</a>
+            <a href="tel:+923001234567" class="hover:underline"
+              >+92 300 1234567</a
+            >
           </p>
         </div>
       </div>
 
-      <div class="mt-8 border-t border-green-600 pt-4 text-center text-white/90 text-sm">
-        &copy; <span id="current-year"></span> Karwaan‑e‑Umeed. All rights reserved.
+      <div
+        class="mt-8 border-t border-green-600 pt-4 text-center text-white/90 text-sm"
+      >
+        &copy; <span id="current-year"></span> Karwaan‑e‑Umeed. All rights
+        reserved.
       </div>
     </footer>
     <script src="script.js"></script>
