Added two more pages

--- a/index.html
+++ b/index.html
@@ -39,13 +39,17 @@
             >
           </li>
           <li>
-            <a href="perspectives.html" class="hover:text-green-300 transition"
+            <a
+              href="perspectives/perspectives.html"
+              class="hover:text-green-300 transition"
               >Perspectives</a
             >
           </li>
           <li>
-            <a href="pakistan.html" class="hover:text-green-300 transition"
-              >Child Labor in Pakistan</a
+            <a
+              href="insights/insights.html"
+              class="hover:text-green-300 transition"
+              >Insights</a
             >
           </li>
           <li>
@@ -116,16 +120,18 @@
             >
           </li>
           <li>
-            <a href="survey.html" class="block hover:text-green-300">Survey</a>
+            <a class="block hover:text-green-300">Survey</a>
           </li>
           <li>
-            <a href="perspectives.html" class="block hover:text-green-300"
+            <a
+              href="perspectives/perspectives.html"
+              class="block hover:text-green-300"
               >Perspectives</a
             >
           </li>
           <li>
-            <a href="pakistan.html" class="block hover:text-green-300"
-              >Child Labor in Pakistan</a
+            <a href="insights/insights.html" class="block hover:text-green-300"
+              >Insights</a
             >
           </li>
           <li>
