Fixed broken urls

--- a/insights/insights.html
+++ b/insights/insights.html
@@ -51,9 +51,7 @@
           </li>
         </ul>
 
-        <!-- Support Button -->
         <a
-          href="fundraising.html"
           class="hidden md:block bg-green-400 text-white font-semibold px-4 py-2 rounded-lg hover:bg-green-500 transition"
         >
           Support Our Cause
@@ -143,12 +141,11 @@
           Understanding the rankings and root causes of child labor in our
           country.
         </p>
-        <!-- <a
-          href="fundraising.html"
+        <a
           class="bg-green-400 text-white font-semibold px-6 py-3 rounded-lg hover:bg-green-500 transition"
         >
           Support Our Cause
-        </a> -->
+        </a>
       </div>
     </header>
     <!-- Rating of Child Labor -->
@@ -324,14 +321,10 @@
               >
             </li>
             <li>
-              <a href="pakistan.html" class="hover:underline"
-                >Child Labor in Pakistan</a
-              >
+              <a class="hover:underline">Insights</a>
             </li>
             <li>
-              <a href="fundraising.html" class="hover:underline"
-                >Fundraising & Office</a
-              >
+              <a class="hover:underline">Fundraising & Office</a>
             </li>
           </ul>
         </div>
