--- a/perspectives/perspectives.html
+++ b/perspectives/perspectives.html
@@ -142,12 +142,11 @@
           Voices from individuals, activists, and officials highlighting the
           urgent need to combat child labor.
         </p>
-        <!-- <a
-          href="fundraising.html"
+        <a
           class="bg-green-400 text-white font-semibold px-6 py-3 rounded-lg hover:bg-green-500 transition"
         >
           Support Our Cause
-        </a> -->
+        </a>
       </div>
     </header>
     <section class="py-16 bg-gray-50">
@@ -311,19 +310,15 @@
             <li><a href="index.html" class="hover:underline">Home</a></li>
             <li><a href="survey.html" class="hover:underline">Survey</a></li>
             <li>
-              <a href="perspectives.html" class="hover:underline"
-                >Perspectives</a
+              <a class="hover:underline">Perspectives</a>
+            </li>
+            <li>
+              <a href="../insights/insights.html" class="hover:underline"
+                >Insights</a
               >
             </li>
             <li>
-              <a href="pakistan.html" class="hover:underline"
-                >Child Labor in Pakistan</a
-              >
-            </li>
-            <li>
-              <a href="fundraising.html" class="hover:underline"
-                >Fundraising & Office</a
-              >
+              <a class="hover:underline">Fundraising & Office</a>
             </li>
           </ul>
         </div>
