--- a/index.html
+++ b/index.html
@@ -53,15 +53,12 @@
             >
           </li>
           <li>
-            <a href="fundraising.html" class="hover:text-green-300 transition"
-              >Fundraising & Office</a
-            >
+            <a class="hover:text-green-300 transition">Fundraising & Office</a>
           </li>
         </ul>
 
         <!-- Support Button -->
         <a
-          href="fundraising.html"
           class="hidden md:block bg-green-400 text-white font-semibold px-4 py-2 rounded-lg hover:bg-green-500 transition"
         >
           Support Our Cause
@@ -135,9 +132,7 @@
             >
           </li>
           <li>
-            <a href="fundraising.html" class="block hover:text-green-300"
-              >Fundraising & Office</a
-            >
+            <a class="block hover:text-green-300">Fundraising & Office</a>
           </li>
         </ul>
       </div>
@@ -154,7 +149,6 @@
           and eliminate child labor from society.
         </p>
         <a
-          href="fundraising.html"
           class="bg-green-400 text-white font-semibold px-6 py-3 rounded-lg hover:bg-green-500 transition"
         >
           Support Our Cause
@@ -305,9 +299,7 @@
               >
             </li>
             <li>
-              <a href="fundraising.html" class="hover:underline"
-                >Fundraising & Office</a
-              >
+              <a class="hover:underline">Fundraising & Office</a>
             </li>
           </ul>
         </div>
